# A-kiki

./: .gitignore  DEMO.md  README.md  README_Auto_Chase_system.md  README_Encirclement_PoliceCar.md  carla_vehicle_spawner2.py  kuksa_zenoh_bridge.py  requirements.txt
backbone/: ANKAIOS_DEPLOYMENT_SUMMARY.md  ANKAIOS_DETAILED_GUIDE.md  ANKAIOS_README.md  CLAUDE.md  Dockerfile.base  Dockerfile.camera-bridge  Dockerfile.carla-spawner  Dockerfile.kuksa-bridge  Dockerfile.websocket  GEMINI.md  QUICKSTART_ANKAIOS.md  READCMH.md  README.md  README_INSTALL.md  README_Technical_Documentation.md  ankaios_manifest.yaml  build_containers.sh  camera_websocket_server.py  carla_vehicle_spawner.py  install_ankaios.sh  install_dependencies.sh  kuksa_zenoh_bridge.py  package.xml  police_dashboard_enhanced.html  police_websocket_bridge.py  ros2_camera_zenoh_bridge.py  run_enhanced_police_system.py  run_police_all.py  start_ankaios.sh  stop_ankaios.sh  test_camera_pipeline.py  test_camera_ws.html  vss_police_schema.json
backbone/config/: police_system_config.json
backbone/install/: local_setup.sh  setup.sh
backbone/main/: __init__.py
backbone/main/cpp_camera_processor/: CMakeLists.txt  camera_processor.cpp
backbone/main/scripts/: CMakeLists.txt  CMakeLists_cpp.txt  CMakeLists_hybrid.txt  CMakeLists_zenoh_test.txt  README.md  auto_chase_lidar.py  auto_chase_vehicle_control.py  auto_chase_vehicle_control_backup.py  auto_chase_vehicle_control_v2.py  auto_chase_vehicle_control_v3.py  auto_chase_vehicle_controlv2.py  cpp_zenoh_shm_processor.cpp  run_auto_chase_vehicle.sh  run_manual_and_pedestrian.sh  run_shm_camera_system.sh  run_simple_chase.sh  run_simple_chase_system.sh  vehicle_spawn_mh3.py
backbone/zenoh/: lock_on_pub.py  zenoh_check.py
main/chase/: chase_system.py
main/cpp_camera_processor/: build.sh
main/perception/: README_unified_collision_detector.md  __init__.py  bounding_box_detector.py  collision_detector.py  sensor_fusion.py  target_tracker.py  (+4 more)
perception/: collision_tracker.py
police_control/: police_control.py  test_police_control_carla_mockzenoh.py
scripts/: __init__.py  manual_vehicle_control.py
source/: test_police_control_carla_mockzenoh.py
vehicle/: __init__.py
(+66 files in other folders)
